--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "web-builder",
+  "name": "website-builder",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "4.29.1",
@@ -42,6 +43,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
