--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@clerk/nextjs": "4.29.1",
@@ -69,7 +70,9 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.9.1",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
